Fix avatar alignment with comment arrow in timeline
Remove `top: 0` from `.timeline-avatar` which caused regular comment
avatars to be misaligned with the comment box arrow (bypassed 8px
padding-top on timeline items). For the review avatar offset, switch
from margin-top to explicit `top: 51px` positioning to precisely align
with the comment box arrow regardless of static position/padding.

--- a/web_src/css/repo.css
+++ b/web_src/css/repo.css
@@ -465,7 +465,7 @@ td .commit-summary {
 }
 
 .repository.view.issue .comment-list .timeline-avatar-offset {
-  margin-top: 48px;
+  top: 51px;
 }
 
 .repository.view.issue .comment-list .timeline-item {
@@ -476,7 +476,6 @@ td .commit-summary {
 .repository.view.issue .comment-list .timeline-item .timeline-avatar {
   position: absolute;
   left: -68px;
-  top: 0;
 }
 
 /* Don't show the mobile oriented avatar ".inline-timeline-avatar" on desktop. Desktop uses the avatar with class ".timeline-avatar" */
